# mcp_massive

./: CHANGELOG.md  FILTERING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  README.md  REFACTOR_PLAN.md  RELEASE_NOTES_v0.6.0.md  pyproject.toml
examples/: filtering_examples.py  performance_validation.py
src/mcp_massive/: __init__.py  formatters.py  server.py
src/mcp_polygon/: filters.py  formatters.py  server.py
tests/: test_filters.py  test_formatters.py
